correções na seção de contas.

--- a/WebContent/templates/principal.xhtml
+++ b/WebContent/templates/principal.xhtml
@@ -20,9 +20,9 @@
 			<h:graphicImage library="imagens" name="logotipo_g.png"/>
 		</div>
 		<div id="barra_menu">
-	    	<ui:insert name="barra_menu">
+	    	<!-- <ui:insert name="barra_menu">
 	    		<ui:include src="/restrito/menu_sistema.xhtml"/>
-	   		</ui:insert>   
+	   		</ui:insert>    -->
 		</div>
 		<div id="corpo">
 			<ui:insert name="corpo"/>    
